services/jellyfin/jellyfin.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  labels: 
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: '/config'
          readonly: false
          name: smb
          subPath: config
        - mountPath: '/movies'
          readonly: false
          name: smb
          subPath: movies
        - mountPath: '/shows'
          readonly: false
          name: smb
          subPath: shows
        volumes:
          - name: smb
            persistentVolumeClaim:
              claimName: pjellyfin-smb-pvc
