services/jellyfin/jellyfin-services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin 
spec:
  ports:
  - targetPort: 8096
    name: web
    port: 80
  selector:
    app: jellyfin
